--- a/Views/Contato/Index.cshtml
+++ b/Views/Contato/Index.cshtml
@@ -4,12 +4,14 @@
 
 <div class="text-center">
 
-    <div class="d-grip gap-2 d-md-flex justify-content-md-start">
-        <a class="btn btn-primary" role="button">Adicionar novo contato</a>
-    </div>
 
     <h1 class="display-4">Listagem de contatos</h1>
     <p>Sistema de controle de contatos.</p>
+
+    <div>
+        <a class="btn btn-primary" role="button" asp-controller="Contato" asp-action="Criar">Adicionar novo contato</a>
+    </div>
+    <br />
     <table class="table">
         <thead>
             <tr>
@@ -28,7 +30,7 @@
                 <td>11 92222-2020</td>
                 <td>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <a role="button" class="btn btn-primary">Editar</a>
+                        <a role="button" class="btn btn-success">Editar</a>
                         <a rule="button" class="btn btn-warning">Apagar</a>
                     </div>
                 </td>
@@ -40,7 +42,7 @@
                 <td>11 92222-2020</td>
                 <td>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <a role="button" class="btn btn-primary">Editar</a>
+                        <a role="button" class="btn btn-success">Editar</a>
                         <a rule="button" class="btn btn-warning">Apagar</a>
                     </div>
                 </td>
@@ -52,7 +54,7 @@
                 <td>11 92222-2020</td>
                 <td>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <a role="button" class="btn btn-primary">Editar</a>
+                        <a role="button" class="btn btn-success">Editar</a>
                         <a rule="button" class="btn btn-warning">Apagar</a>
                     </div>
                 </td>
