--- a/Views/Contato/Criar.cshtml
+++ b/Views/Contato/Criar.cshtml
@@ -1,8 +1,7 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
+﻿@{
+    ViewData["Title"] = "Criar contato";
 }
+
 <div class="text-center">
     <h1 class="display-4">Cadastrar contato</h1>
 </div>
@@ -22,5 +21,7 @@
         <label for="exampleInputPassword1">Telefone</label>
         <input type="tel" class="form-control" placeholder="Telefone do contato">
     </div>
+    <br />
     <button type="submit" class="btn btn-primary">Adicionar</button>
+    <a class="btn btn-success" role="button" asp-controller="Contato" asp-action="Index">Voltar</a>
 </form>
