--- a/Views/Contato/Index.cshtml
+++ b/Views/Contato/Index.cshtml
@@ -30,8 +30,8 @@
                 <td>11 92222-2020</td>
                 <td>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <a role="button" class="btn btn-success">Editar</a>
-                        <a rule="button" class="btn btn-warning">Apagar</a>
+                        <a role="button" class="btn btn-success" asp-controller="Contato" asp-action="Editar">Editar</a>
+                        <a rule="button" class="btn btn-warning" asp-controller="Contato" asp-action="Apagar">Apagar</a>
                     </div>
                 </td>
             </tr>
@@ -42,8 +42,8 @@
                 <td>11 92222-2020</td>
                 <td>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <a role="button" class="btn btn-success">Editar</a>
-                        <a rule="button" class="btn btn-warning">Apagar</a>
+                        <a role="button" class="btn btn-success" asp-controller="Contato" asp-action="Editar">Editar</a>
+                        <a rule="button" class="btn btn-warning" asp-controller="Contato" asp-action="Apagar">Apagar</a>
                     </div>
                 </td>
             </tr>
@@ -54,8 +54,8 @@
                 <td>11 92222-2020</td>
                 <td>
                     <div class="btn-group" role="group" aria-label="Basic example">
-                        <a role="button" class="btn btn-success">Editar</a>
-                        <a rule="button" class="btn btn-warning">Apagar</a>
+                        <a role="button" class="btn btn-success" asp-controller="Contato" asp-action="Editar">Editar</a>
+                        <a rule="button" class="btn btn-warning" asp-controller="Contato" asp-action="Apagar">Apagar</a>
                     </div>
                 </td>
             </tr>
