microsoft entity framework packets installation, ControleData e ControleModel

--- a/Views/Contato/ConfirmarApagar.cshtml
+++ b/Views/Contato/ConfirmarApagar.cshtml
@@ -4,6 +4,6 @@
 
 <div class="text-center">
     <h3 class="display-4">Deseja realmente apagar este contato?</h3>
-    <button type="submit" class="btn btn-outline-warning">Apagar</button>
+    <button type="submit" class="btn btn-warning" asp-controller="Contato" asp-action="Apagar">Apagar</button>
     <a class="btn btn-primary" role="button" asp-controller="Contato" asp-action="Index">Cancelar</a>
 </div>
