--- a/Views/Contato/Index.cshtml
+++ b/Views/Contato/Index.cshtml
@@ -31,7 +31,7 @@
                 <td>
                     <div class="btn-group" role="group" aria-label="Basic example">
                         <a role="button" class="btn btn-success" asp-controller="Contato" asp-action="Editar">Editar</a>
-                        <a rule="button" class="btn btn-warning" asp-controller="Contato" asp-action="Apagar">Apagar</a>
+                        <a rule="button" class="btn btn-warning" asp-controller="Contato" asp-action="ConfirmarApagar">Apagar</a>
                     </div>
                 </td>
             </tr>
@@ -43,7 +43,7 @@
                 <td>
                     <div class="btn-group" role="group" aria-label="Basic example">
                         <a role="button" class="btn btn-success" asp-controller="Contato" asp-action="Editar">Editar</a>
-                        <a rule="button" class="btn btn-warning" asp-controller="Contato" asp-action="Apagar">Apagar</a>
+                        <a rule="button" class="btn btn-warning" asp-controller="Contato" asp-action="ConfirmarApagar">Apagar</a>
                     </div>
                 </td>
             </tr>
@@ -55,7 +55,7 @@
                 <td>
                     <div class="btn-group" role="group" aria-label="Basic example">
                         <a role="button" class="btn btn-success" asp-controller="Contato" asp-action="Editar">Editar</a>
-                        <a rule="button" class="btn btn-warning" asp-controller="Contato" asp-action="Apagar">Apagar</a>
+                        <a rule="button" class="btn btn-warning" asp-controller="Contato" asp-action="ConfirmarApagar">Apagar</a>
                     </div>
                 </td>
             </tr>
